<resources>
    <string name="app_name">Life Savers</string>
    <string name="password_1">Password</string>
    <string name="log_in_1">Log In</string>
    <string name="email_1">Email</string>
    <string name="login_1">Login</string>
    <string name="mobile_no">Mobile No.</string>
    <string name="don_t_have_an_account">Don\'t have an account ?</string>
    <string name="register">Register</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="register_button">Register</string>
</resources>